text align fix

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ h1 {
 
 #techprojs {
     text-align: left;
-    margin-top: 300px;
 }
 
 section {
